K8-Manifest-yamlfile/Deploy.yaml
#Kind: Deployment
# strategy
#type: RollingUpdate or Recreate
# image: docker hub image
# akmssrst
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-1
spec:
  strategy:
   type: RollingUpdate
  replicas: 3
  selector:
   matchLabels:
    env: Dev
  template:
   metadata:
    name: pod1
    labels:
     env: Dev
   spec:
    containers:
     - name: container-1
       image: nginx
       ports:
        - containerPort: 80
       nodeName: worker-node-1
