K8-Manifest-yamlfile/Service-ClusterIp.yaml
# akmstps
apiVersion: v1
kind: Service
metadata:
  name: app-service1
spec:
  type: ClusterIP
  ports:
   - port: 80 #this is for clusterip
     targetPort: 80 #containerport
  selector:
   env: prod            # deployment label
