K8-Manifest-yamlfile/Ingress.yaml
#akms
#ingress: networking.k8s.io/v1
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
   - host: "example.com"  # vm dnsname
     http:
      paths:
       - path: "/"
         pathType: "prefix"  # or Exact
         backend:
          service:
           name: #servicename1
           port:
            number: 80 # ClusterIP port
  - host: "flipkar.com"
     http:
      paths:
       - path: "/"
         pathType: "prefix"
         backend:
          service:
           name: #servicename2
           port:
            number: 80 # ClusterIP port
